Create Wishlist and Favorite as two functions