@@ -1,8 +1,6 @@
 package com.dulith.gamehub.service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -21,11 +19,11 @@ public class FavoriteService {
     }
 
     public boolean isFavorite(User user, Game game) {
-        return favoriteRepository.existsByUserAndGame(user, game);
+        return favoriteRepository.findByUserAndGame(user, game).isPresent();
     }
 
-    public void addFavorite(User user, Game game) {
-        if (!favoriteRepository.existsByUserAndGame(user, game)) {
+    public void addToFavorites(User user, Game game) {
+        if (!isFavorite(user, game)) {
             Favorite favorite = new Favorite();
             favorite.setUser(user);
             favorite.setGame(game);
@@ -33,30 +31,33 @@ public class FavoriteService {
         }
     }
 
-    public void removeFavorite(User user, Game game) {
+    public void removeFromFavorites(User user, Game game) {
         favoriteRepository.findByUserAndGame(user, game)
                 .ifPresent(favoriteRepository::delete);
+    }
+
+    public boolean toggleFavorite(User user, Game game) {
+        if (isFavorite(user, game)) {
+            removeFromFavorites(user, game);
+            return false;
+        } else {
+            addToFavorites(user, game);
+            return true;
+        }
+    }
+
+    public List<Favorite> getFavoriteItems(User user) {
+        return favoriteRepository.findByUser(user);
     }
 
     public List<Game> getFavoriteGames(User user) {
         return favoriteRepository.findByUser(user)
                 .stream()
                 .map(Favorite::getGame)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public boolean toggleFavorite(User user, Game game) {
-    Optional<Favorite> existing = favoriteRepository.findByUserAndGame(user, game);
-
-    if (existing.isPresent()) {
-        favoriteRepository.delete(existing.get());
-        return false;
-    } else {
-        Favorite favorite = new Favorite();
-        favorite.setUser(user);
-        favorite.setGame(game);
-        favoriteRepository.save(favorite);
-        return true;
+    public long getFavoriteCount(User user) {
+        return favoriteRepository.countByUser(user);
     }
-}
 }
